# ability-hand-ros2

./: .gitignore  .reformat.sh  Dockerfile  README.md  cyclone_dds_install.sh  cyclonedds.xml  docker-compose.yaml  docker-compose.yml  entrypoint.sh  install_cyclone_dds.sh  requirements.txt
docker/: Dockerfile  docker-compose.yaml
src/ah_messages/: CMakeLists.txt  package.xml
src/ah_messages/msg/: Digits.msg
src/ah_ros_py/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/ah_ros_py/ah_ros_py/: ah_node.py  build_thumb_maps.py  fsr_marker_node.py  hand_wave.py  hand_wave_node.py  kd_tree_lookup.py  manus_glove_node.py  map_fingerpoints_node.py  plots.py
src/ah_ros_py/ah_ros_py/data/: all_fingers_right.pkl
src/ah_ros_py/launch/: ah_node.launch.py  ah_node_launch.py  hand_wave.launch.py  hand_wave_launch.py  manus_glove.launch.py  map_fingerpoints.launch.py  map_thumb.launch.py
src/ah_urdf/: CMakeLists.txt  package.xml
src/ah_urdf/urdf/: ability_hand_left_large.urdf  ability_hand_left_small.urdf  ability_hand_right_large.urdf  ability_hand_right_large_no_fsr.urdf  ability_hand_right_small.urdf  left_thumb_only.urdf  right_thumb_only.urdf
src/manus_ros2/src/: ManusDataPublisher.cpp  ManusDataPublisher.hpp
src/urdf_launch/config/: urdf.rviz
src/urdf_launch/launch/: description.launch.py  display.launch.py
